SUBDIRS = . \
	  1p \
	  1p2c \
	  2p2c \
	  2p2cni \
	  boundaryid \
	  box3d \
	  box3d-compressible \
	  brinkman \
	  capillary \
	  co2 \
	  diffusion \
	  dimltdimworld \
	  elementid \
	  fractionalflow \
	  fvca5 \
	  gravity \
	  hysteresis \
	  minc \
	  mixed \
	  newton \
	  parallel \
	  pardiso \
	  phasepressure_ff \
	  pipe-newcouple-incomp \
	  pipe-newrichards-couple \
	  richards \
	  splitting \
	  star2dgf \
	  star2uggrid \
	  stokes \
	  transport \
	  tutorial \
	  twophase \
	  vtk

include $(top_srcdir)/am/global-rules

