SUBDIRS = . \
	  1p \
	  1p2c \
	  2p2c \
	  2p2cni \
	  box3d \
	  brinkman \
	  diffusion \
	  fractionalflow \
	  fvca5 \
	  id \
	  minc \
	  pardiso \
	  phasepressure_ff \
	  pipe-newcouple-incomp \
	  pipe-newrichards-couple \
	  richards \
	  splitting \
	  star2uggrid \
	  stokes \
	  transport \
	  tutorial \
	  twophase \
	  vtk

include $(top_srcdir)/am/global-rules

