SUBDIRS = . \
	  1p \
	  1p2c \
	  2p \
	  2p2c \
	  2p2cni \
	  2pni \
	  box3d \
	  brinkman \
	  coupled \
	  coupledtransport \
	  diffusion \
	  dimltdimworld \
	  fractionalflow \
	  fvca5 \
	  id \
	  linearelasticity \
	  minc \
	  pardiso \
	  phasepressure_ff \
	  pipe-newcouple-incomp \
	  pipe-newrichards-couple \
	  richards \
	  shallowwater \
	  splitting \
	  star2uggrid \
	  stokes \
	  transport \
	  tutorial \
	  vtk

include $(top_srcdir)/am/global-rules

