# tests where program to build and program to run are equal
NORMALTESTS = nima2p2c

# list of tests to run
#TESTS = $(NORMALTESTS)

# programs just to build when "make check" is used
check_PROGRAMS = $(NORMALTESTS)

dist_noinst_DATA =  nima2p2c.cc

nima2p2c_SOURCES = nima2p2c.cc
# nima2p2c_HEADERS = nimasproblem.hh

include $(top_srcdir)/am/global-rules
