# tests where program to build and program to run are equal
NORMALTESTS = co2

# list of tests to run
#TESTS = $(NORMALTESTS)

# programs just to build when "make check" is used
check_PROGRAMS = $(NORMALTESTS)

co2dir = $(includedir)/dune/dumux/test/co2
co2_HEADERS = co2problem11.hh
co2_SOURCES = co2.cc

include $(top_srcdir)/am/global-rules
