# tests where program to build and program to run are equal
NORMALTESTS = 2dbump 2dpulse

# list of tests to run
#TESTS = $(NORMALTESTS)

# programs just to build when "make check" is used
check_PROGRAMS = $(NORMALTESTS)

2dbump_SOURCES = 2dbump.cc

2dpulse_SOURCES = 2dpulse.cc

include $(top_srcdir)/am/global-rules

