install(FILES
boxlocalassembler.hh
boxlocalresidual.hh
cclocalassembler.hh
cclocalresidual.hh
diffmethod.hh
entitycolor.hh
fvassembler.hh
fvlocalassemblerbase.hh
fvlocalresidual.hh
initialsolution.hh
jacobianpattern.hh
numericepsilon.hh
partialreassembler.hh
staggeredfvassembler.hh
staggeredlocalresidual.hh
DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dumux/assembly)
