install(FILES
assembler.hh
boxlocalassembler.hh
boxlocalresidual.hh
cclocalassembler.hh
cclocalresidual.hh
diffmethod.hh
entitycolor.hh
experimentalhelpers.hh
fvassembler.hh
fvlocalassemblerbase.hh
fvlocalresidual.hh
initialsolution.hh
jacobianpattern.hh
localassembler.hh
numericepsilon.hh
partialreassembler.hh
staggeredfvassembler.hh
staggeredlocalresidual.hh
DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dumux/assembly)
