add_subdirectory(geometry)
add_subdirectory(properties)
add_subdirectory(typetraits)

install(FILES
balanceequationopts.hh
boundaryconditions.hh
boundaryflag.hh
boundarytypes.hh
cubicspline.hh
cubicsplinehermitebasis.hh
defaultmappertraits.hh
defaultusagemessage.hh
deprecated.hh
dimensionlessnumbers.hh
doubleexpintegrationconstants.hh
doubleexpintegrator.hh
dumuxmessage.hh
entitymap.hh
enumerate.hh
exceptions.hh
fixedlengthspline_.hh
fvproblem.hh
indextraits.hh
integrate.hh
intersectionmapper.hh
loggingparametertree.hh
math.hh
monotonecubicspline.hh
numericdifferentiation.hh
optionalscalar.hh
parameters.hh
partial.hh
pdesolver.hh
pointsource.hh
properties.hh
reorderingdofmapper.hh
reservedblockvector.hh
spline.hh
splinecommon_.hh
staggeredfvproblem.hh
start.hh
stringutilities.hh
tabulated2dfunction.hh
tag.hh
timeloop.hh
timemanager.hh
valgrind.hh
variablelengthspline_.hh
DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dumux/common)
