SUBDIRS = impes

fractionalflowdir = $(includedir)/dune/dumux/fractionalflow
fractionalflow_HEADERS = exsolution.hh \
	fractionalflow.hh \
	fractionalflowmultiscaleproblem.hh \
	fractionalflowproblem.hh \
	p1variableclass.hh \
	variableclass2p2c.hh \
	variableclass2p2cni.hh \
	variableclass2p.hh \
	variableclass_deprecated.hh

include $(top_srcdir)/am/global-rules
